<resources>
    <string name="app_name">JTU_654App</string>
    <string name="enter_name_of_player">Enter name of player:</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rolled_dice_tap_a_die_to_hold_it">Rolled Dice (Tap a die to hold it)</string>
    <string name="held_dice">Held Dice</string>
    <string name="roll">Roll</string>
    <string name="players">Players:</string>
    <string name="done">Done</string>
    <string name="end_turn">End Turn</string>
</resources>
