<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dq3395yi.jtu_654app.MainActivity">


    <TextView
        android:text="@string/enter_name_of_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/TV_ENTER_PLAYER"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/TV_ENTER_PLAYER"
        android:layout_centerHorizontal="true"
        android:id="@+id/EDC_PLAYER_NAME" />

    <Button
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EDC_PLAYER_NAME"
        android:layout_centerHorizontal="true"
        android:id="@+id/BTN_ADD_PLAYER" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BTN_ADD_PLAYER"
        android:id="@+id/TV_PLAYERS_LIST_LABEL"
        android:text="@string/players"/>

    <TextView
        android:maxLines = "1000"
        android:scrollbars = "vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TV_PLAYERS_LIST_LABEL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/TV_PLAYER_LIST"
        android:layout_above="@+id/BTN_SUBMIT_PLAYERS" />

    <Button
        android:text="@string/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BTN_SUBMIT_PLAYERS"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
